--- a/src/components/DoorsContainer.astro
+++ b/src/components/DoorsContainer.astro
@@ -2,13 +2,16 @@
 import Door from './Door.astro';
 ---
 
-<div class="relative w-full h-full flex">
-  <!-- Puerta izquierda -->
-  <Door side="left" id="door-left" />
-  
-  <!-- Puerta derecha -->
-  <Door side="right" id="door-right" />
+<div class="relative w-full h-full flex justify-center items-center">
+  <!-- Container para puertas más angostas -->
+  <div class="relative flex" style="width: 60vw; max-width: 800px; height: 85vh;">
+    <!-- Puerta izquierda -->
+    <Door side="left" id="door-left" />
+    
+    <!-- Puerta derecha -->
+    <Door side="right" id="door-right" />
+    
+    <!-- Marco central donde se unen las puertas -->
+    <div class="absolute top-0 bottom-0 left-1/2 w-3 bg-gradient-to-b from-amber-800 via-amber-700 to-amber-800 transform -translate-x-1/2 shadow-xl z-10"></div>
+  </div>
 </div>
-
-<!-- Marco central donde se unen las puertas -->
-<div class="absolute top-0 bottom-0 left-1/2 w-2 bg-gradient-to-b from-amber-800 via-amber-700 to-amber-800 transform -translate-x-1/2 shadow-lg z-10"></div>
