feat: Implement interactive entrance animation with animated doors, side windows, and a logo reveal.

--- a/src/components/DoorsContainer.astro
+++ b/src/components/DoorsContainer.astro
@@ -1,17 +1,42 @@
 ---
 import Door from './Door.astro';
+import SideWindow from './SideWindow.astro';
 ---
 
-<div class="relative w-full h-full flex justify-center items-center">
-  <!-- Container para puertas más angostas -->
-  <div class="relative flex" style="width: 60vw; max-width: 800px; height: 85vh;">
-    <!-- Puerta izquierda -->
-    <Door side="left" id="door-left" />
+<div class="relative w-full h-full flex justify-center items-center perspective-container">
+  <!-- Fachada de la tienda -->
+  <div class="relative flex items-end shadow-2xl" style="width: 90vw; max-width: 1200px; height: 85vh;">
     
-    <!-- Puerta derecha -->
-    <Door side="right" id="door-right" />
+    <!-- Ventana Izquierda (20%) -->
+    <div class="h-full w-1/5">
+      <SideWindow side="left" />
+    </div>
+
+    <!-- Puertas Centrales (60%) -->
+    <div class="w-3/5 h-full relative flex transform-style-3d z-20">
+      <!-- Puerta izquierda -->
+      <Door side="left" id="door-left" />
+      
+      <!-- Puerta derecha -->
+      <Door side="right" id="door-right" />
+    </div>
+
+    <!-- Ventana Derecha (20%) -->
+    <div class="h-full w-1/5">
+      <SideWindow side="right" />
+    </div>
     
-    <!-- Marco central donde se unen las puertas -->
-    <div class="absolute top-0 bottom-0 left-1/2 w-3 bg-gradient-to-b from-amber-800 via-amber-700 to-amber-800 transform -translate-x-1/2 shadow-xl z-10"></div>
+    <!-- Sombras de piso -->
+    <div class="absolute -bottom-4 left-0 right-0 h-4 bg-black/40 blur-lg rounded-[50%]"></div>
   </div>
 </div>
+
+<style>
+  .perspective-container {
+    perspective: 1500px;
+    perspective-origin: 50% 50%;
+  }
+  .transform-style-3d {
+    transform-style: preserve-3d;
+  }
+</style>
